--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "element-ui": "^2.15.14",
+    "lodash": "^4.13.1",
+    "vue": "^2.5.2",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
